# openapi/openapi.yml
@@ -7,7 +7,7 @@ info:
     name: Maxim Grise
     email: maxim.grise@gmail.com
 servers:
-  - url: http://localhost/v1/
+  - url: http://localhost:8081/
     description: Local env
 paths:
 
@@ -116,10 +116,82 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /game/{id}/deck/{deck_id}:
+  /game/{id}/score:
+    get:
+      operationId: getGameScore
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the game to retrieve
+      responses:
+        '200':
+          description: Game score success retrieved.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: 'schemas/game.yml#/components/schemas/GameScore'
+        '400':
+          description: A mandatory parameter is missing.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Game doesn't exists.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: An error occured.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /game/{id}/deck:
+    get:
+      summary: GET
+      operationId: getGameDeck
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the game to retrieve
+      responses:
+        '200':
+          description: Game deletion success response.
+        '400':
+          description: A mandatory parameter is missing.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Game doesn't exists.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: An error occured.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
     post:
       summary: POST
-      operationId: addDeck
+      operationId: addGameDeck
       parameters:
         - in: path
           name: id
@@ -128,13 +200,13 @@ paths:
             format: uuid
           required: true
           description: UUID of the game
-        - in: path
+        - in: query
           name: deck_id
           schema:
             type: string
             format: uuid
           required: true
-          description: UUID of the deck
+          description: UUID of the deck template to add to the game
       responses:
         '200':
           description: Deck added successfully.
@@ -152,6 +224,87 @@ paths:
                 $ref: '#/components/schemas/Error'
         '409':
           description: A deck has already been added to this game.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: An error occured.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /game/{id}/deck/shuffle:
+    post:
+      summary: POST
+      operationId: shuffleDeck
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the game to retrieve
+      responses:
+        '200':
+          description: Game shuffle success.
+        '400':
+          description: A mandatory parameter is missing.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Game doesn't exists.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: An error occured.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /game/{id}/deck/deal:
+    post:
+      summary: POST
+      operationId: dealCardToPlayer
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the game to retrieve
+        - in: query
+          name: count
+          schema:
+            type: integer
+          required: true
+          description: The amount of cards to deal
+        - in: query
+          name: player_id
+          schema:
+            type: string
+            format: uuid
+          required: true
+          description: UUID of the player to deal cards to
+      responses:
+        '200':
+          description: Card deal success.
+        '400':
+          description: A mandatory parameter is missing.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Game doesn't exists.
           content:
             application/json:
               schema:
